--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "description": "Blacklist test server for IC option project",
   "version": "0.1.0",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://gcornu@bitbucket.org/gcornu/vtecl_nodejs.git"
+  },
   "dependencies": {
     "express": "3.x",
   }
