--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "express": "3.x",
-	"underscore": "1.*",
-	"pg": "3.x"
+    "underscore": "1.*",
+    "mongoose": "3.x"
   }
 }
