--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "type": "git",
     "url": "https://github.com/gcornu/ffc-blacklist-server.git"
   },
+  "engines": {
+    "node": "0.11.x"
+  },
   "dependencies": {
     "express": "3.x",
     "underscore": "1.*",
