--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   },
   "dependencies": {
     "express": "3.x",
-    "underscore": "1.*",
-    "mongoose": "3.8.14"
+    "underscore": "1.*"
   }
 }
