--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "express": "3.x",
-    "underscore": "1.*"
+    "underscore": "1.*",
+    "newrelic": "1.9.2"
   }
 }
