--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "3.x",
     "underscore": "1.*",
-    "newrelic": "1.9.2"
+    "newrelic": "1.9.2",
+    "mongoose": "3.8.14"
   }
 }
