--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "3.x",
     "underscore": "1.*",
-    "mongoose": "3.8.14"
+    "mongoose": "3.8.14",
+    "nodetime": "0.8.15"
   }
 }
